--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -203,6 +203,7 @@ ar:
   mail_view_welcome: مرحباً بك في %{app_name}
   mail_view_register: 'أنت على وشك الانتهاء من تسجيل حسابك على %{app_name}! من فضلك أكد عنوان بريدك الإلكتروني بالضغط على الرابط التالي:'
   mail_confirm_button: 'أكِّد الحساب'
+  pender_could_not_parse: عذراً ، لقد واجهنا خطأ ما اثناء تحليل الميديا. من فضلك أعد المحاولة وتواصل مع فريق الدعم إن استمر الخطأ.
   slack_restricted_join_to_members: عذراً ، لا يمكنك الانضمام إلى فريق %{team_name} حيث أنه محصور على أعضاء فريق %{teams} على Slack.
   admin:
     actions:
@@ -292,6 +293,9 @@ ar:
   max_number_of_team_users_reached: عذراً ، لقد تم الوصول إلى الحد الأقصى للأعضاء في هذا الفريق
   max_number_of_projects_reached: عذراً ، لقد تم الوصول إلى الحد الأقصى للمشاريع في هذا الفريق
   cant_set_custom_statuses: عذراً ، خاصية حالات التحقق المتخصصة غير متاحة لهذا الفريق
+  cant_change_custom_statuses: |-
+      عذرًا ، لا يمكن تعديل تعريفات الحالة لأن بعض الحالات قد تصير مفقودة. مُعرّفات الحالة اﻵتية : %{statuses} قيد الاستخدام للعناصر التالية :
+      %{others_amount} %{urls}
   cant_create_team_task: عذراً ، هذه الخاصية غير متاحة لهذا الفريق
   cant_create_media_under_this_team_using_extension: عذراً ، خاصية ملحق المتصفح غير متاحة لهذا الفريق
   error_invalid_attribution: إسناد غير صالح
@@ -303,10 +307,13 @@ ar:
   devise:
     mailer:
       reset_password_instructions:
+        subject: "تعليمات إعادة ضبط كلمة المرور لدى %{app_name}"
         header_title: إعادة تعيين كلمة المرور
         header_text: "لقد تلقينا طلبك لإعادة تعيين كلمة المرور الخاصة على%{app_name}"
-        instruction: يرجى الملاحظة أن مدة صلاحية الرابط %{expire} ساعات.احصل على رسالة بريد إلكتروني جديدة لإعادة تعيين كلمة المرور
-        instruction_2: إذا لم تقم بتنفيذ هذا الطلب ، أو كنت تواجه صعوبة لإعادة تعيين كلمة المرور الخاصة بك ، فيرجى الاتصال بنا على %{support_email}
+        action: إعادة تعيين كلمة مرورك
+        expiry: مدة صلاحية الرابط %{expire} ساعات.
+        instruction_1: اضغط هنا لإعادة الطلب.
+        instruction_2: إذا لم تقم إنشاء هذا الطلب ، أو كنت تواجه صعوبة لإعادة تعيين كلمة المرور الخاصة بك ، فيرجى الاتصال بنا على %{support_email}.
       invitation_instructions:
         subject: "لقد دعاك %{user} للانضمام إلى فريق %{team}"
         hello: مرحباً %{name}
@@ -349,15 +356,16 @@ ar:
       header_title: حساب مُكَرَّر
       one_email: |-
           <p>نود أن نذكرك بطريقة تسجيل حسابك الحالية على %{app_name}.</p>
-          </p>ما الذي حدث؟ لقد حاولت التسجيل على %{app_name} باستخدام حساب على %{user_provider} المربوط بالبريد الإلكتروني %{user_email}.
+          <p>ما الذي حدث؟ لقد حاولت التسجيل على %{app_name} باستخدام حساب على %{user_provider} المربوط بالبريد الإلكتروني %{user_email}.
           ولكن هذا البريد الإلكتروني مسجل بالفعل على %{app_name} مرتبطاً بحساب اخر على %{duplicate_provider}.</p>
-          </p>ما الذي يمكنك فعله الآن؟ قم بتسجيل الدخول باستخدام  %{duplicate_provider}.</p>
-          </p>للدخول نفس الطريقة المستخدمة سابقاً. للمزيد من المساعدة ارسل لنا على البريد الإلكتروني %{support_email}.</p>
+          <p>ما الذي يمكنك فعله الآن؟ قم بتسجيل الدخول باستخدام  %{duplicate_provider}.</p>
+          <p>للدخول نفس الطريقة المستخدمة سابقاً. للمزيد من المساعدة ارسل لنا على البريد الإلكتروني %{support_email}.</p>
       both_emails: |-
           <p>نود أن نساعدك لتسجيل الدخول على %{app_name}.</p>
-          </p>ما الذي حدث؟ لقد حاولت تسجيل حساب جديد على %{app_name} باستخدام بريد إلكتروني مسجل بالفعل.</p>
-          </p>حاول تسجيل الدخول باستخدام البريد الإلكتروني وكلمة المرور بدلاً من إنشاء حساب جديد.</p>
-          </p>بذلك ستدخل باستخدام نفس الحساب المسجل سابقاً. للمزيد من المساعدة ارسل لنا على البريد الإلكتروني %{support_email}.</p>
+          <p>ما الذي حدث؟ لقد حاولت تسجيل حساب جديد على %{app_name} باستخدام بريد إلكتروني مسجل بالفعل.</p>
+          <p>حاول تسجيل الدخول باستخدام البريد الإلكتروني وكلمة المرور بدلاً من إنشاء حساب جديد.</p>
+          <p>بذلك ستدخل باستخدام نفس الحساب المسجل سابقاً. للمزيد من المساعدة ارسل لنا على البريد الإلكتروني %{support_email}.</p>
+      email: البريد الإلكتروني
     invitation:
       title: دعوة جديدة
     delete_user:
@@ -366,20 +374,22 @@ ar:
       header_text: تم حذف حساب مستخدم ونقل المحتوى الخاص به لمستخدم %{anonymous} معرّفه %{id}
       anonymous: مجهول
     admin_mailer:
-      team_download_subject: "[%{team}] تصدير الفريق جاهز للتحميل"
-      team_dump_title: "تصدير الفريق"
+      team_download_subject: "[%{team}] بيانات الفريق جاهزة للتحميل"
+      team_dump_title: بيانات الفريق
       types:
-        dump: 'تصدير الجداول'
-        images: 'صور'
-      team_dump_button: تحميل تصدير الفريق
+        dump: 'لقطة البيانات'
+        csv: 'تقرير'
+        images: 'أرشيف الصور'
+      team_dump_text: "لقد طلبت لقطة البيانات للفريق %{team} - يمكنك استخدام هذا الرابط للتحميل %{link}"
+      team_dump_button: تحميل بيانات الفريق
       decompress_text: "سوف يتم تنزيل %{type} كملف مضغوط ومشفر. لفك الضغط الرجاء استخدام كلمة السر %{password}"
       expire_note: "يرجى الملاحظة أن مدة صلاحية الرابط %{days} أيام."
-      project_export_csv_subject: "[%{project}] تقرير مشروعك جاهز للتحميل"
-      project_export_images_subject: "[%{project}] صور مشروعك جاهزة للتحميل"
-      project_export_title: تصدير المشروع
-      project_export_button: تحميل تصدير المشروع
-      project_export_csv_text: "لقد طلبت تقرير %{project} - يمكنك استخدام هذا الرابط للتحميل %{link}"
-      project_export_images_text: "لقد طلبت صور %{project} - يمكنك استخدام هذا الرابط للتحميل %{link}"
+      project_export_csv_subject: "[%{team} - %{project}] تقرير المشروع جاهز للتحميل"
+      project_export_images_subject: "[%{team} - %{project}] أرشيف صور المشروع جاهز للتحميل"
+      project_export_title: بيانات المشروع
+      project_export_button: تحميل بيانات المشروع
+      project_export_csv_text: "لقد طلبت تقريراً للمشروع %{project} - يمكنك استخدام هذا الرابط للتحميل %{link}"
+      project_export_images_text: "لقد طلبت أرشيف الصور للمشروع %{project} - يمكنك استخدام هذا الرابط للتحميل %{link}"
       team_import_subject: تمت عملية استيراد البيانات
       team_import_title: استيراد البيانات
       team_import_text: "<p>تمت عملية استيراد البيانات إلى %{app_name}. افتح %{worksheet_url} لمراجعة نتيجة الاستيراد لكل عنصر.</p><p>يمكنك إعادة  تشغيل الاستيراد بعد تصحيح اﻷخطاء المعلنة - لن يتم تكرار العناصر التي سبق استيرادها.</p>"
@@ -422,11 +432,13 @@ ar:
       unassign_log: "قام(ت) %{author} بإلغاء تكليف %{model} عن %{username}"
       assign_by: تكليف من
       unassign_by: قام(ت) بإلغاء التكليف
+      project_button: 'اذهب إلى صفحة المشروع '
     request_to_join:
       subject: "طلب انضمام إلى %{team}"
       team_page: صفحة الفريق
       team_button: 'اذهب إلى صفحة الفريق '
       rejected_subject: لم تتم الموافقة على طلبك للإنضمام إلى فريق %{team}
+      approved_subject: مرحباً بك في %{team}
       request_title: "طلب انضمام إلى %{team}"
       request_text: "%{name} (%{email}) يريد الإنضمام إلى%{team} على %{app_name}. يمكنك معالجة هذا الطلب بالضغط على الرابط %{url}."
       approved_title: مرحبًا بك في فريق %{team}
@@ -472,31 +484,32 @@ ar:
   only_admins_can_approve_bots: عذراً ، هذه العملية متاحة للمسؤولين فقط
   could_not_save_related_bot_data: عذراً ، لقد واجهنا خطأ ما اثناء إضافة البوت. من فضلك أعد المحاولة وتواصل مع فريق الدعم إن استمر الخطأ.
   bot_limited_team_not_pro: عذراً ، البوت غير متاح لهذا الفريق
-  slack_save_task_comment: "أضاف *%{user}* تعليقاً للمهمة *%{task}* في %{url} في %{project}*: %{comment}"
   bot_cant_add_response_to_task: عذراً ، البوت يمكنه فقط تقديم اقتراحاً ﻹجابة المهمة
   bot_cant_add_review_to_task: عذراً ، البوت لا يمكنه مراجعة المهام
   task_suggestion_invalid_value: عذراً ، صيغة الاقتراح غير صحيحة
   tag_text_id_not_found: عذراً ، لا يوجد وسم بهذا المُعَرِّف
   annotation_type_language_label: اللغة
   smooch_bot_message_confirmed: |-
-      شكرا لكم. سوف تساعدنا رسالتك في بحث مدى انتشار المعلومات الخاطئة على WhatsApp خلال هذه الانتخابات.
+      شكرا لك. تمت إضافة طلبك إلى قائمة انتظار التحقق.
 
-      تمت إضافة هذا العنصر إلى قائمة انتظار التحقق. سنحاول ارسال تقرير إليك خلال 24 ساعة ، لكن يرجى ملاحظة أننا لا نستطيع الرد على كل طلب.
-  smooch_bot_message_unconfirmed: نظرًا لأنك لم ترد  بـ 1 ، فلن نقوم بمعالجة رسالتك. شكرا لكم.
-  smooch_bot_message_type_unsupported: عذرًا ، لا ندعم هذا النوع من الرسائل بعد للتحقق من صحتها.
+      سنحاول ارسال تقرير إليك خلال 24 ساعة ، لكن يرجى ملاحظة أننا لا نستطيع الرد على كل طلب.
+  smooch_bot_message_unconfirmed: نظراً لأنك لم ترد  بـ 1 ، فلن نقوم بمعالجة طلبك وشكراً.
+  smooch_bot_message_type_unsupported: عذرًا ، لا ندعم هذا النوع من الرسائل في الوقت الحالي.
   smooch_bot_meme: إليك ميم أنشأناه بناء على العنصر الذي أرسلته للتحقق منه. لعرض المزيد %{url}.
   smooch_bot_result: |-
       [تقرير التحقيق] لقد تم  تصنيف العنصر الذي أرسلته لنا أنه *%{status}*.
 
       فيما يلي الخطوات التي اتخذناها لتحديد ذلك : %{url}
   smooch_bot_ask_for_confirmation: |-
-      شكرا لإرسال هذه الرسالة.
+      شكراً لإرسال هذا الطلب. هل تود أننا نتحقق من صحة محتواه ؟
 
-      هل تشك في أنها معلومات خاطئة تتعلق بالانتخابات العامة الهندية لعام 2019 ؟
+      لتقول نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي المحادثة.
+  smooch_bot_window_closing: إن حجم الطلبات مرتفع للغاية ، ولم نتمكن من معالجة طلبك بعد. شكراً على الانتظار.
+  smooch_bot_not_final: |-
+      [تقرير التحقيق - تصحيح] لقد حدث خطأ في تصنيف العنصر الذي أرسلته لنا على أنه *%{status}*.
 
-      ليقول نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي طلبك.
-  smooch_bot_window_closing: إن حجم الطلبات مرتفع للغاية ، ولم نتمكن من معالجة طلبك بعد. شكرا لك مرة اخرى على طلبك. إذا كان لديك رسالة أخرى لتقديمها ، فالرجاء القيام بذلك.
-  smooch_bot_not_final: "[تقرير التحقيق - تصحيح] لقد حدث خطأ في تصنيف العنصر الذي أرسلته لنا على أنه *%{status}*. ما زال العنصر في قائمة اﻹنتظار للمزيد من التحقق."
+      ما زال العنصر في قائمة اﻹنتظار للمزيد من التحقق.
+  smooch_bot_disabled: شكرا لإرسال هذه الرسالة.لا نستطيع إرسال أي من تقرير التحقيق ، حيث أن هذا المشروع لم يعد نشطاً.
   smooch_bot_result_changed: |-
       [تقرير التحقيق - تصحيح] لقد تغير تصنيف العنصر الذي أرسلته لنا من *%{previous_status}* إلى *%{status}*.
 
@@ -584,3 +597,6 @@ ar:
   smooch_requests: الطلبات
   smooch_requests_asc: اﻷقل طلباً
   smooch_requests_desc: اﻷكثر طلباً
+  smooch_bot_ask_for_confirmation_checkpoint: هذه رسالة مخصصة لطلب التأكيد برقم "١".
+  smooch_bot_message_confirmed_checkpoint: هذه رسالة مخصصة لإبلاغك أنه تم استلام طلبك.
+  smooch_bot_message_unconfirmed_checkpoint: هذه رسالة مخصصة لإبلاغك أنه تم تجاهل رسالتك.
