--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -199,6 +199,7 @@ ro:
       user_banned: "%{user} a fost interzis în echipa %{team}"
   mail_view_welcome: Bun venit în %{app_name}
   mail_view_register: 'Sunteți la un pas de a folosi %{app_name}! Confirmați adresa de e-mail, făcând click pe următorul link:'
+  pender_could_not_parse: Imposibil de analizat acest fișier media
   slack_restricted_join_to_members: Ne pare rău, nu vă puteți alătura echipei %{team_name} deoarece ea este doar pentru membrii echipei(lor) Slack %{teams}.
   admin:
     actions:
@@ -279,6 +280,9 @@ ro:
   max_number_of_team_users_reached: Ne pare rău, s-a atins numărul maxim de utilizatori pentru această echipă
   max_number_of_projects_reached: Ne pare rău, s-a atins numărul maxim de proiecte pentru această echipă
   cant_set_custom_statuses: Ne pare rău, individualizarea statuturilor nu este disponibilă pentru această echipă
+  cant_change_custom_statuses: |-
+      Ne pare rău, nu puteți modifica definițiile statuturilor pentru că unele statuturi s-ar putea pierde. Acești identificatori de statut: %{statuses} sunt folosiți în elementele ce urmează:
+      %{urls} %{others_amount}
   cant_create_team_task: Ne pare rău, echipa Dvs nu are acces la această caracteristică
   cant_create_media_under_this_team_using_extension: Ne pare rău, extensia pentru browser nu este disponibilă pentru această echipă
   error_invalid_attribution: Atribuire nevalidă
@@ -292,6 +296,11 @@ ro:
       invitation_instructions:
         subject: "%{user} v-a invitat să vă alăturați echipei %{team} "
         hello: Salut %{name}
+        someone_invited_you_default:
+          html: "%{name} v-a invitat să vă alăturați echipei %{team} în calitate de %{role}."
+        someone_invited_you_custom:
+          html: "%{name} v-a invitat să vă alăturați echipei %{team} în calitate de %{role}, spunând:"
+        accept: 'Acceptă invitația'
         accept_until: Invitația dată va expira pe %{due_date}.
         ignore: Dacă nu doriți să acceptați invitația, ignorați acest email.
         app_team: "Echipa %{app} "
@@ -319,12 +328,25 @@ ro:
       assign_task_text: "%{author} a desemnat o sarcină în proiectul %{project} din %{team}."
       unassign_task_text: "%{author} a transferat o sarcină în proiectul %{project} din %{team}."
   mail_security:
+    device_subject: 'Avertizare de securitate: Conectare nouă la %{app_name} din %{browser} pe %{platform}'
+    failed_subject: 'Avertizare de securitate: Încercări ieșuate de a se conecta la %{app_name}'
     ip: V-ați conectat din %{location}
+    device: V-ați conectat din %{browser} pe %{platform}
+    devise_name: "%{browser} pe %{platform}"
+    failed: Au fost identificate încercări de conectare ieșuate
+    password_text: resetează parola imediat.
     ip_text: Se pare că v-ați conectat recent la contul Dvs %{app_name} dintr-o locație nouă. Dacă nu erați Dvs, ar fi bine să %{change_password}
+    failed_text: Se pare că s-au făcut mai multe încercări de conectare la contul Dvs %{app_name}. Dacă erați Dvs, puteți să ignorați acest mesaj liniștit. Dacă nu erați Dvs, ar fi bine să %{change_password}
     time_h: Ora
+    device_h: Dispozitiv
     location_h: Locația
     location_disclaimer: "* Locația a fost stabilită aproximativ, în baza adresei IP de origine."
     ip_h: Adresa IP
+    privacy: "%{manage} notificările prin email • Aflați mai multe despre %{privacy}"
+    privacy_text: Politica de confidențialitate
+    manage_text: Gestionează
+    privace_manage_plain: Gestionează notificările prin email
+    privacy_plain: Aflați mai multe despre Politica noastră de confidențialitate
   archive_keep_backup: Video Vault
   archive_pender_archive: Păstrează capturi de ecran
   archive_archive_is: Archive.is
@@ -342,31 +364,29 @@ ro:
   only_admins_can_approve_bots: Ne pare rău, robotul poate fi aprobat doar de utilizator cu rol de super admin
   could_not_save_related_bot_data: Ne pare rău, nu am putut adăuga robotul la această echipă
   bot_limited_team_not_pro: Ne pare rău, acest robot nu este disponibil pentru această echipă
-  slack_save_task_comment: "*%{user}* a adăugat o notă la *%{task}* în %{url} în *%{project}*: %{comment}"
   bot_cant_add_response_to_task: Ne pare rău, un robot nu poate răspunde la o sarcină direct - rugăm să transmiteți o sugestie de răspuns în loc
   bot_cant_add_review_to_task: Ne pare rău, un robot nu poate analiza o sarcină
   task_suggestion_invalid_value: Sugestia trebuie să fie un hash JSON cu 'suggestion' (sugestie - valoarea, care se copie în răspuns dat la sarcină în caz de accept) și 'comment' (comentariu - afișat pentru utilizatori)
   tag_text_id_not_found: Ne pare rău, nu există etichete cu identificator introdus
   annotation_type_language_label: Limba
   smooch_bot_message_confirmed: |-
-      Vă mulțumim. Ceea ce ne-ați transmis ne va ajuta să studiem răspândirea informațiilor înșelătoare pe WhatsApp în perioada electorală actuală.
+      Vă mulțumim. Solicitarea Dvs a fost adăugată în rândul nostru pentru verificare.
 
-      De asemenea, acest element a fost adăugat în rândul nostru pentru verificare. Vom încerca să vă oferim un raport în decurs de 24 de ore, însă, atenționăm că nu putem da răspuns la fiecare solicitare.
+      Vom încerca să vă oferim un raport în decurs de 24 de ore, însă, atenționăm că nu putem da răspuns la fiecare solicitare.
   smooch_bot_message_unconfirmed: Deoarece nu ați răspuns cu 1, nu vom procesa mesajul dvs în continuare. Mulțumim.
-  smooch_bot_message_type_unsupported: Ne pare rău, deocamdată nu acceptăm acest tip de format de fișiere pentru verificare.
+  smooch_bot_message_type_unsupported: Ne pare rău, deocamdată nu acceptăm acest tip de mesaje pentru verificare.
   smooch_bot_meme: Iată un meme, pe care l-am creat în baza elementului, pentru care ați solicitat verificarea. Aflați mai multe pe %{url}.
   smooch_bot_result: |-
       [Verification Report] Mesajul, pe care l-ați partajat cu noi, este marcat *%{status}*.
 
       Iată care sunt pașii, pe care le-am făcut pentru a determina acest lucru: %{url}
   smooch_bot_ask_for_confirmation: |-
-      Vă mulțumim pentru că ați transmis acest mesaj.
-
-      Credeți că este vorba de o informație înșelătoare, legată de Alegerile generale din India din 2019?
+      Vă mulțumim pentru că ați transmis această solicitare. Doriți ca noi să verificăm conținutul acesteia?
 
       Pentru a spune da, *vă rugăm să răspundeți cu 1*. Orice alt răspuns va pune sfârșit conversației noastre.
-  smooch_bot_window_closing: Numărul solicitărilor în lucru este foarte mare și deocamdată nu am reușit să soluționăm solicitarea dvs. Vă mulțumim pentru că ne-ați transmis-o. Dacă aveți alte mesaje pentru noi, vă rugăm să le trimiteți.
-  smooch_bot_not_final: "[Raport de verificare - CORECTARE] Mesajul transmis de Dvs a fost marcat greșit ca fiind *%{status}*. Este încă în coada de așteptare pentru verificări ulterioare."
+  smooch_bot_window_closing: Numărul de solicitări transmise prin acest canal este foarte mare și deocamdată nu am reușit să soluționăm solicitarea dvs. Vă mulțumim pentru că aveți răbdare.
+  smooch_bot_not_final: |-
+      [Raport de verificare - CORECTARE] Mesajul transmis de Dvs a fost marcat greșit ca fiind *%{status}*. Este încă în coada de așteptare pentru verificări ulterioare.
   smooch_bot_result_changed: |-
       [Raport de verificare - CORECTARE] Starea mesajului transmis de Dvs s-a modificat din *%{previous_status}* în *%{status}*.
 
